--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,16 +20,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.0.0'
-    implementation 'com.android.support:design:27.0.0'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+
+    //Firebase APIs
     implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    //Image APIS
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.jrvansuita:PickImage:2.2.4'
+    implementation 'jp.wasabeef:picasso-transformations:2.2.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
