Candidate details and edit values

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation 'com.github.jrvansuita:PickImage:2.2.4'
     implementation 'jp.wasabeef:picasso-transformations:2.2.1'
 
+    //PDF Reader
+    implementation 'com.github.barteksc:android-pdf-viewer:2.0.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
