--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,12 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     //Firebase APIs
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:15.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.5'
 
     //Image APIS
     implementation 'de.hdodenhof:circleimageview:2.2.0'
